# ROLO

./: .gitignore  CMakeLists.txt  README.md  error.pptx  package.xml  review.docx  误差fastlio.xlsx
ROLO/: CMakeLists.txt  README.md
ROLO/cmake/: pmc.CMakeLists.txt
ROLO/config/: params.yaml  params_os.yaml
ROLO/config/rviz/: rolo.rviz  rolo_gps.rviz
ROLO/data/: lio-sam.bag
ROLO/data/full_sdu/: lego_loam.tum  lio_sam.tum  rolo.tum
ROLO/data/offroad/fohui_mountain/: aloam.tum  ctlo.bag  lio_sam.tum  odom.tum  rolo_raw.tum
ROLO/data/tum/: lio_sam12.tum  liosam.tum  rolo_se3.tum
ROLO/data/xinglong/: lio_sam.tum
ROLO/include/rolo/: utility.h
ROLO/launch/: module_loam.launch  module_rviz.launch
ROLO/src/: backMapping.cpp  imageProjection.cpp  lidarOdometry.cpp
ROLO/test/: pcd_transformation.py  translation_plot.py
config/: params.yaml  params_os.yaml  prior_pose_params.yaml
config/M2UD/: params.yaml  prior_pose_params.yaml
config/RELLIS/: params.yaml  prior_pose_params.yaml
config/rviz/: rolo.rviz  rolo_sam.rviz
config/selfcraft/: prior_pose_params.yaml
config/tartan2/: params.yaml  prior_pose_params.yaml
data/: ROLO.bag  lego_loam_temp.tum  loam.bag  rolo_temp.tum  temp1.tum
data/offroad/fohui_mountain/: lego_loam.tum  rolo.tum
data/offroad/off1/: lio_sam.tum  rolo.tum  rolo_raw.tum
data/tum/: lego_loam.tum  rolo.tum  rolo_lc.tum  rolo_planes.tum  temp.tum
data/xinglong/: rolo.tum
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/cloud_msgs/: slope.h
devel/include/rolo/: CloudInfoStamp.h
devel/lib/pkgconfig/: cloud_msgs.pc  rolo.pc  rviz_satellite.pc
include/rolo/: pose_solver.hpp  undirected_graph.h  utility.h
include/rolo/eskf/: eskf.hpp
include/rolo_sam/: utility.h
include/rot_gicp/gicp/: gicp_settings.hpp  lsq_registration.hpp  rot_vgicp.hpp  vmp_voxel.hpp
include/scancontext/: Scancontext.h
launch/: module_loam.launch  module_prior.launch  module_rviz.launch  rolo_run.launch  rolo_sam_run.launch
msg/: CloudInfoStamp.msg
new3D/red/: 演示文稿.pptx
other/: all.pptx
plot/script/: mean_max_std.py  plot_2dtraj.py  plot_3dtraj.py  plot_z_time.py  q2e.py  rmse_rpy.py  rmse_xyz.py  rmse_xyz0812.py  test.py  test1.py  traj_length.py
plot/script/off_scripts/: plot_3dtraj.py  plot_z_time.py
plot/script/rotation_absolute_error/: 1.py  2T_ang.py  3.py  4.py  5.py  delete.py  sample.py
plot/script/translation_absolute_error/: 1.py  2.py  3.py  4.py  5.py
resource/: test_odom.bag
resource/meshes/: vehicle.dae
rolo_vs_fastlio/: 演示文稿1.pptx
slam_time/slam_time/: bar.py  bar3D.py  boxplot.py  data_preprocess.py  test.py  time_curve.py  time_curve1.py
slam_time/slam_time/full_ct/: ct_kitti00.tum  ct_kitti05.tum  ct_kitti08.tum  ct_off1.tum  ct_off2.tum  ct_off3.tum  ct_qfs.tum  ct_xls.tum
slam_time/slam_time/full_hdl/: hdl_kitti00.tum  hdl_kitti05.tum  hdl_kitti08.tum  hdl_off1.tum  hdl_off2.tum  hdl_off3.tum  hdl_qfs.tum  hdl_xls.tum
slam_time/slam_time/full_lego/: lego_kitti00.tum  lego_kitti05.tum  lego_kitti08.tum  lego_off1.tum  lego_off2.tum  lego_off3.tum  lego_qfs.tum  lego_xls.tum
slam_time/slam_time/full_loam/: loam_kitti00.tum  loam_kitti05.tum  loam_kitti08.tum  loam_off1.tum  loam_off2.tum  loam_off3.tum  loam_qfs.tum  loam_xls.tum
slam_time/slam_time/full_rolo/: rolo_kitti00.tum  rolo_kitti05.tum  rolo_kitti08.tum  rolo_off1.tum  rolo_off2.tum  rolo_off3.tum  rolo_qfs.tum  rolo_xls.tum
slam_time/slam_time/hdl/: hdl_back_kitti00.tum  hdl_back_kitti05.tum  hdl_back_kitti08.tum  hdl_back_off1.tum  hdl_back_off2.tum  hdl_back_off3.tum  hdl_back_qfs.tum  hdl_back_xls.tum  hdl_front_kitti00.tum  hdl_front_kitti05.tum  hdl_front_kitti08.tum  hdl_front_off1.tum  hdl_front_off2.tum  hdl_front_off3.tum  hdl_front_qfs.tum  hdl_front_xls.tum
slam_time/slam_time/lego/: lego_back_kitti00.tum  lego_back_kitti05.tum  lego_back_kitti08.tum  lego_back_off1.tum  lego_back_off2.tum  lego_back_off3.tum  lego_back_qfs.tum  lego_back_xls.tum  lego_front_kitti00.tum  lego_front_kitti05.tum  lego_front_kitti08.tum  lego_front_off1.tum  lego_front_off2.tum  lego_front_off3.tum  lego_front_qfs.tum  lego_front_xls.tum
slam_time/slam_time/loam/: loam_back_kitti00.tum  loam_back_kitti05.tum  loam_back_kitti08.tum  loam_back_off1.tum  loam_back_off2.tum  loam_back_off3.tum  loam_back_qfs.tum  loam_back_xls.tum  loam_front_kitti00.tum  loam_front_kitti05.tum  loam_front_kitti08.tum  loam_front_off1.tum  loam_front_off2.tum  loam_front_off3.tum  loam_front_qfs.tum  loam_front_xls.tum
slam_time/slam_time/rolo/: rolo_back_kitti00.tum  rolo_back_kitti05.tum  rolo_back_kitti08.tum  rolo_back_off1.tum  rolo_back_off2.tum  rolo_back_off3.tum  rolo_back_qfs.tum  rolo_back_xls.tum  rolo_front_kitti00.tum  rolo_front_kitti05.tum  rolo_front_kitti08.tum  rolo_front_off1.tum  rolo_front_off2.tum  rolo_front_off3.tum  rolo_front_qfs.tum  rolo_front_xls.tum
src/: README.md  backMapping.cpp  featureExtraction.cpp  imageProjection.cpp  lidarOdometry.cpp  undirected_graph.cpp  ~lidarOdometry.cpp
src/ROLO/: CMakeLists.txt
src/ROLO/config/: params.yaml
src/ROLO/config/rviz/: rolo.rviz  rolo_global.rviz  rolo_gps.rviz
src/ROLO/data/: 2024-01-11-15-51-18.bag  lego-loam(odom).bag
src/ROLO/data/offroad/fohui_mountain/: loam.bag
src/ROLO/include/rolo/: utility.h
src/ROLO/include/rot_gicp/gicp/: gicp_settings.hpp
src/ROLO/include/rot_gicp/gicp/impl/: rot_vgicp_impl.hpp
src/ROLO/launch/: module_loam.launch  module_rviz.launch  rolo_run.launch
src/ROLO/src/: backMapping.cpp  dual_odom_delta_state_filter_future_split.py  imageProjection.cpp  lidarOdometry.cpp  slopeEstimation.cpp
src/ROLO/test/: rolo_feature_matching.cpp
src/cloud_msgs/: CMakeLists.txt
src/cloud_msgs/msg/: slope.msg
src/prior_pose/: ground_factor_node copy.cpp  ground_factor_node.cpp  pose_solver.cpp  prior_pose_node.cpp
src/rot_gicp/gicp/: lsq_registration.cpp  rot_vgicp.cpp
src/rviz_satellite/: .gitignore
test/: dual_odom_delta_state_filter_future_split.py  eskf_odom_test.cpp  eskf_odom_test.launch  rotation_test.cpp  translation_plot.py
(+271 files in other folders)
